# calamity-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build-examples.sh  build.sh  changelog.md  main.cpp  run.sh  wrangler-docs.toml  wrangler-website.toml
.github/workflows/: main.yml
.wrangler/cache/: wrangler-account.json
backend/: audio.cpp  audio.hpp  components.cpp  components.hpp  definitions.cpp  definitions.hpp  engine.cpp  engine.hpp  file.cpp  file.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  keycode.hpp  logger.cpp  logger.hpp  node.cpp  node.hpp  services.cpp  services.hpp  utils.cpp  utils.hpp
backend/core/: definitions.cpp  definitions.hpp  signal.hpp
backend/core/node/: components.cpp  components.hpp  node.cpp  node.hpp
backend/core/ui/: definitions.cpp  definitions.hpp  label.cpp  label.hpp
backend/services/: audio.cpp  audio.hpp  engine.cpp  engine.hpp  graphics.cpp  graphics.hpp  services.cpp  services.hpp
backend/services/graphics/: definitions.cpp  definitions.hpp  graphics.cpp  graphics.hpp
backend/services/input/: events.cpp  events.hpp  input.cpp  input.hpp  keycode.hpp
backend/services/physics/: definitions.cpp  definitions.hpp  physics.cpp  physics.hpp
backend/utils/: file.cpp  file.hpp  logger.cpp  logger.hpp  utils.cpp  utils.hpp
docs/: basic_notions.md  compiling_a_project.md  creating_a_new_project.md  example_game.md  getting_started.md  mainpage.md  tips_and_tricks.md  your_first_project.md
examples/: CMakeLists.txt
examples-website/: README.md  build.js  index.html  package-lock.json  package.json  pnpm-lock.yaml
examples-website/app/: app.vue
examples-website/app/components/: AppLogo.vue
examples-website/app/pages/: examples.vue  index.vue
examples-website/app/pages/example-[example]/: index.vue
examples-website/public/examples/: manifest.json
examples-website/public/examples/input/: manifest.json
examples/animated-sprite/: CMakeLists.txt  main.cpp  manifest.json
examples/atlas/: CMakeLists.txt  atlasScript.hpp  main.cpp
examples/audio/: CMakeLists.txt  audioScript.hpp  main.cpp  manifest.json
examples/button/: CMakeLists.txt  button.hpp  main.cpp  manifest.json
examples/camera-control/: CMakeLists.txt  cameraScript.hpp  main.cpp  manifest.json
examples/file/: CMakeLists.txt  main.cpp  manifest.json
examples/file/assets/: label.txt
examples/graphics-settings/: CMakeLists.txt  button.hpp  main.cpp
examples/input/: CMakeLists.txt  inputScript.hpp  main.cpp
examples/multi-window/: CMakeLists.txt  main.cpp
examples/node-tree/: CMakeLists.txt  boxScript.hpp  fpsScript.hpp  main.cpp  manifest.json  rootScript.hpp
examples/node_tree/: main.cpp  rootScript.hpp
examples/physics/: CMakeLists.txt  main.cpp  manifest.json  nodeScript.hpp  rootScript.hpp
examples/platformer/: CMakeLists.txt  main.cpp  manifest.json  playerScript.hpp
examples/raycast/: CMakeLists.txt  main.cpp  manifest.json  raycastScript.hpp
examples/sensor/: CMakeLists.txt  main.cpp  manifest.json  rootScript.hpp
examples/text/: CMakeLists.txt  main.cpp  manifest.json
examples/top-down/: CMakeLists.txt  main.cpp  manifest.json  playerScript.hpp
scripts/: BirdScript.hpp  CameraScript.hpp  RootScript.hpp  scripts.cpp
website/: .gitignore  build.js  nuxt.config.ts  package.json  pnpm-workspace.yaml
website/app/: app.config.ts
website/app/components/: AppLogo.vue
website/app/pages/: examples.vue  index.vue
website/app/pages/example-[example]/: index.vue
website/app/plugins/: router-reload.client.ts
website/public/examples/: manifest.json
website/public/examples/atlas/: atlasScript.hpp  main.cpp
website/public/examples/audio/: CMakeLists.txt  main.cpp
website/public/examples/input/: inputScript.hpp  manifest.json
website/public/examples/node-tree/: rootScript.hpp
website/public/examples/physics/: CMakeLists.txt  main.cpp  manifest.json  rootScript.hpp
